[package]
name = "ogmios-client"
version = "0.1.1"
edition = "2024"
description = "Rust client/SDK for Cardano Ogmios"
license = "MIT"
repository = "https://github.com/vietanhrs/ogmios.rs"
documentation = "https://docs.rs/ogmios-client"
readme = "README.md"
authors = ["vietanhrs"]
keywords = ["cardano", "ogmios", "blockchain", "client", "sdk"]
categories = ["api-bindings", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for health checks
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# URL handling
url = "2.5"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = []
# Enable additional runtime statistics
metrics = []
